@@ -4,9 +4,7 @@
 
 <h3><a href="<?php echo $this->href_reader; ?>"><?php echo $this->name; ?></a></h3>
 
-<?php if ($this->hasImage): ?>
-<div class="image_container main_image"><a href="<?php echo $this->mainImage['large']; ?>" title="<?php echo $this->mainImage['desc']; ?>" rel="lightbox"><img src="<?php echo $this->mainImage['thumbnail']; ?>" alt="<?php echo $this->mainImage['alt']; ?>"<?php echo $this->mainImage['thumbnail_size']; ?> /></a></div>
-<?php endif; ?>
+<?php echo $this->images->generateMainImage('thumbnail'); ?>
 
 <?php if ($this->sku): ?>
 <div class="sku"><?php echo $this->sku; ?></div><?php endif; if ($this->teaser): ?>
