@@ -5,23 +5,14 @@
 
 <h2 id="name"><?php echo $this->name; ?></h2>
 
-
-<?php if ($this->hasImage): ?>
-<div id="image_main" class="image_container main_image"><a href="<?php echo $this->mainImage['large']; ?>" title="<?php echo $this->mainImage['desc']; ?>" rel="lightbox"><img src="<?php echo $this->mainImage['medium']; ?>" alt="<?php echo $this->mainImage['alt']; ?>"<?php echo $this->mainImage['medium_size']; ?> /></a></div>
-<?php endif; ?>
+<?php echo $this->images->generateMainImage('medium'); ?>
 <?php if($this->hasOptions): ?>
 <div id="options_container" class="options">
 <?php echo implode("\n", $this->options); ?>
 </div>
 <?php endif; ?>
 
-<?php if (count($this->gallery)>1): ?>
-<div id="image_gallery">
-<?php foreach( $this->gallery as $image ): ?>
-<div class="image_container gallery"><img src="<?php echo $image['gallery']; ?>" alt="<?php echo $image['alt']; ?>"<?php echo $image['gallery_size']; ?> /></div>
-<?php endforeach; ?>
-</div>
-<?php endif; ?>
+<?php echo $this->images->generateGallery(); ?>
 
 <?php if ($this->sku): ?>
 <div class="sku"><?php echo $this->sku; ?></div><?php endif; if ($this->description): ?>
